--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
@@ -3,16 +3,16 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-   <!-- android:paddingBottom="10dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="10dp">-->
+    <!-- android:paddingBottom="10dp"
+     android:paddingLeft="10dp"
+     android:paddingRight="10dp"
+     android:paddingTop="10dp">-->
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardViewWidget"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        android:id="@+id/cardViewWidget">
+        android:layout_margin="8dp">
 
         <!--    <HorizontalScrollView
                 android:id="@+id/titleContainer"
@@ -25,30 +25,30 @@
             android:id="@+id/imvAuthorThumbContainer"
             android:layout_width="205dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_gravity="center"
-            >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imvAuthorThumb"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:layout_alignParentTop="true"
-                android:contentDescription="@string/author_img"
                 android:layout_gravity="fill"
+                android:contentDescription="@string/author_img"
                 android:scaleType="fitXY"
 
-               />
+                />
 
             <TextView
                 android:id="@+id/txvArticleTitle"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/imvAuthorThumb"
                 android:layout_gravity="center"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif"
                 android:gravity="left"
+                android:lines="3"
                 android:maxLines="3"
                 android:padding="10dp"
                 android:singleLine="false"
