--- a/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:background="@color/white_color"
     android:orientation="vertical">
 
     <ImageView
@@ -24,6 +24,7 @@
         android:layout_toLeftOf="@+id/followTextView"
         android:layout_toRightOf="@+id/authorImageView"
         android:layout_toStartOf="@+id/followTextView"
+        android:background="@color/white_color"
         android:fontFamily="sans-serif-light"
         android:gravity="center_vertical"
         android:text=""
@@ -39,13 +40,13 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/follow_button_bg"
+        android:background="@color/white_color"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:text="FOLLOW"
         android:textColor="@color/blog.comments.follow_reply_btn"
-        android:textSize="10sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/followingTextView"
@@ -56,15 +57,14 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/follow_button_bg"
-        android:backgroundTint="@color/blog.comments.follow_reply_btn"
+        android:background="@color/white_color"
         android:foregroundGravity="center"
         android:gravity="center"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:text="FOLLOWING"
-        android:textColor="@color/white_color"
-        android:textSize="10sp" />
+        android:textColor="@color/blog.comments.follow_reply_btn"
+        android:textSize="12sp" />
 
     <RelativeLayout
         android:id="@+id/relativeLoadingView"
