--- a/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/header_blogger_dashboard.xml
@@ -6,9 +6,8 @@
 
     <ImageView
         android:id="@+id/bloggerImageView"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:layout_below="@+id/toolbar"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_margin="15dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/family_xxhdpi" />
@@ -26,112 +25,117 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@+id/bloggerImageView">
 
         <LinearLayout
-            android:id="@+id/rankLinearLL"
+            android:id="@+id/statsLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/followTextView"
-            android:layout_toRightOf="@+id/FollowersLinearLL"
-            android:layout_toStartOf="@+id/followTextView"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/rankingTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ellipsize="marquee"
-                android:fontFamily="sans-serif-thin"
-                android:maxLines="1"
-                android:text="3"
-                android:textColor="@color/black_color"
-                android:textSize="32sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="2dp"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="rank"
-                android:textColor="@color/grey_faded"
-                android:textSize="13sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/FollowersLinearLL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/followingTextView1"
-
-            android:layout_alignStart="@+id/followingTextView1"
-            android:layout_toLeftOf="@+id/FollowingLinearLL"
-            android:layout_toStartOf="@+id/FollowingLinearLL"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/followersTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ellipsize="marquee"
-                android:fontFamily="sans-serif-thin"
-                android:maxLines="1"
-                android:text="--"
-                android:textColor="@color/black_color"
-                android:textSize="32sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="2dp"
-                android:ellipsize="marquee"
-                android:maxLines="1"
-                android:text="followers"
-                android:textColor="@color/grey_faded"
-                android:textSize="13sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/FollowingLinearLL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:weightSum="3">
 
-            <TextView
-                android:id="@+id/followingTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ellipsize="marquee"
-                android:fontFamily="sans-serif-thin"
-                android:maxLines="1"
-                android:text="--"
-                android:textColor="@color/black_color"
-                android:textSize="32sp" />
+            <LinearLayout
+                android:id="@+id/rankLinearLL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="2dp"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="followings"
-                android:textColor="@color/grey_faded"
-                android:textSize="13sp" />
+                <TextView
+                    android:id="@+id/rankingTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ellipsize="marquee"
+                    android:fontFamily="sans-serif-thin"
+                    android:maxLines="1"
+                    android:text="--"
+                    android:textColor="@color/black_color"
+                    android:textSize="26sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:text="rank"
+                    android:textColor="@color/grey_faded"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/FollowersLinearLL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/followersTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ellipsize="marquee"
+                    android:fontFamily="sans-serif-thin"
+                    android:maxLines="1"
+                    android:text="--"
+                    android:textColor="@color/black_color"
+                    android:textSize="26sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:ellipsize="marquee"
+                    android:maxLines="1"
+                    android:text="followers"
+                    android:textColor="@color/grey_faded"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/FollowingLinearLL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/followingTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ellipsize="marquee"
+                    android:fontFamily="sans-serif-thin"
+                    android:maxLines="1"
+                    android:text="--"
+                    android:textColor="@color/black_color"
+                    android:textSize="26sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:text="followings"
+                    android:textColor="@color/grey_faded"
+                    android:textSize="13sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
             android:id="@+id/editProfileTextView"
             android:layout_width="match_parent"
             android:layout_height="33dp"
-            android:layout_below="@+id/rankLinearLL"
+            android:layout_below="@+id/statsLinearLayout"
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edit_button_bg"
@@ -147,7 +151,7 @@
             android:id="@+id/followTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rankLinearLL"
+            android:layout_below="@+id/statsLinearLayout"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
@@ -167,7 +171,7 @@
             android:id="@+id/followingTextView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rankLinearLL"
+            android:layout_below="@+id/statsLinearLayout"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
