--- a/MyCity4Kids/WordPressEditor/src/main/res/values/colors.xml
+++ b/MyCity4Kids/WordPressEditor/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="sourceview_separator">@color/wp_gray_lighten_30</color>
     <color name="sourceview_placeholder_text">@color/wp_gray</color>
     <color name="primary">#1d55f1</color>
+    <color name="black">#000000</color>
 </resources>
