--- a/MyCity4Kids/MyCity4Kids/res/layout/draft_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/draft_list_item.xml
@@ -15,7 +15,6 @@
         android:orientation="horizontal">
 
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="top"
+                android:layout_marginRight="30dp"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-light"
                 android:gravity="top"
@@ -36,18 +36,15 @@
                 android:singleLine="false"
                 android:text="@string/title"
                 android:textColor="@color/black_color"
-                android:textSize="14dp"
-                android:layout_marginRight="30dp"
-                />
+                android:textSize="14sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-               android:layout_below="@+id/txvArticleTitle"
+                android:layout_below="@+id/txvArticleTitle"
                 android:layout_gravity="bottom"
-                android:gravity="bottom"
                 android:layout_marginTop="7dp"
-                >
+                android:gravity="bottom">
 
 
                 <TextView
@@ -56,31 +53,30 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-
-                    android:fontFamily="sans-serif"
-                    android:gravity="left"
                     android:layout_gravity="bottom"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
                     android:singleLine="true"
                     android:text="@string/article_publish_date"
-                    android:textColor="@color/gray2"
-                    android:textSize="12dp"
-                    android:paddingLeft="10dp"/>
+                    android:textSize="11sp" />
+
                 <TextView
                     android:id="@+id/unapproved"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="13dp"
-                    android:text="UNAPPROVED"
-                    android:paddingRight="19dp"
                     android:layout_below="@+id/img_menu"
-                    android:textColor="@color/blue_color"
-                    android:gravity="left"
                     android:layout_marginLeft="10dp"
-
+                    android:gravity="left"
+                    android:paddingRight="19dp"
+                    android:text="UNAPPROVED"
+                    android:textColor="@color/blue_color"
+                    android:textSize="13sp"
 
 
                     />
             </LinearLayout>
+
             <ImageView
                 android:id="@+id/img_menu"
                 android:layout_width="wrap_content"
