--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_profile.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_profile.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="@color/primary"
-        android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+        android:minHeight="?attr/actionBarSize" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,8 +24,11 @@
             android:background="@null"
             android:drawableLeft="@drawable/edit_user_icon"
             android:drawablePadding="10dp"
+            android:fontFamily="sans-serif-light"
             android:hint=" First Name"
-            android:textColor="@color/black_color" />
+            android:paddingLeft="5dp"
+            android:textColor="@color/black_color"
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
@@ -39,8 +42,11 @@
             android:background="@null"
             android:drawableLeft="@drawable/edit_user_icon"
             android:drawablePadding="10dp"
+            android:fontFamily="sans-serif-light"
             android:hint=" Last Name"
-            android:textColor="@color/black_color" />
+            android:paddingLeft="5dp"
+            android:textColor="@color/black_color"
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
@@ -54,31 +60,50 @@
             android:background="@null"
             android:drawableLeft="@drawable/phone_icon"
             android:drawablePadding="10dp"
+            android:fontFamily="sans-serif-light"
             android:hint=" Phone Number"
             android:inputType="number"
             android:maxLength="14"
-            android:textColor="@color/black_color" />
+            android:paddingLeft="5dp"
+            android:textColor="@color/black_color"
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/gray_color" />
 
-        <EditText
-            android:id="@+id/userBioEditText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@null"
-            android:drawableLeft="@drawable/bio_icon"
-            android:drawablePadding="10dp"
-            android:drawableStart="@drawable/bio_icon"
-            android:hint=" Bio"
-            android:maxLength="200"
-            android:minHeight="100dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:singleLine="false"
-            android:textColor="@color/black_color" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="8dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:src="@drawable/bio_icon" />
+
+            <EditText
+                android:id="@+id/userBioEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawablePadding="10dp"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center_vertical"
+                android:hint="User Bio"
+                android:inputType="textCapSentences|textMultiLine"
+                android:maxLength="200"
+                android:maxLines="10"
+                android:minHeight="45dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/black_color"
+                android:textSize="14sp" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
