--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -11,36 +11,53 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txvUserName"
+        <ImageView
+            android:id="@+id/imgAppIcon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primary"
-            android:paddingBottom="20dp"
+            android:paddingBottom="10dp"
             android:paddingLeft="20dp"
-            android:paddingTop="20dp"
-            android:text="Namaste Aunty"
-            android:textColor="@color/white_color" />
+            android:paddingTop="10dp"
+            android:scaleType="fitStart"
+            android:src="@drawable/app_logo" />
 
-        <ImageView
-            android:id="@+id/imgProfile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/navigation.drawer.divider" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:src="@drawable/family_xxhdpi" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgProfile"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/family_xxhdpi" />
+
+            <TextView
+                android:id="@+id/txvUserName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:fontFamily="sans-serif-light"
+                android:paddingBottom="20dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:text="Name"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="20dp"
-            android:background="@color/gray_color" />
-
-        <!--<RadioGroup-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical">-->
+            android:background="@color/navigation.drawer.divider" />
 
         <TextView
             android:id="@+id/rdBtnToday"
@@ -106,339 +123,35 @@
             android:textColor="@color/black_color"
             android:textSize="16sp" />
 
-        <!--</RadioGroup>-->
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/gray_color" />
+            android:background="@color/navigation.drawer.divider" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/editor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
                 android:padding="20dp"
-                android:text="Add Blog" />
+                android:text="Add Blog"
+                android:textColor="@color/navigation.drawer.endtext" />
 
             <TextView
                 android:id="@+id/feed_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
+                android:fontFamily="sans-serif-light"
                 android:padding="20dp"
-                android:text="Feedback" />
+                android:text="Feedback"
+                android:textColor="@color/navigation.drawer.endtext" />
         </LinearLayout>
     </LinearLayout>
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:orientation="vertical"-->
-    <!--android:paddingTop="20dp">-->
 
-    <!--<ImageView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_centerVertical="true"-->
-    <!--android:layout_gravity="center"-->
-    <!--android:src="@drawable/logo_new" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/imgProfile"-->
-    <!--android:layout_width="80dp"-->
-    <!--android:layout_height="80dp"-->
-    <!--android:layout_centerVertical="true"-->
-    <!--android:layout_gravity="center"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:src="@drawable/family_xxhdpi" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txvUserName"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="center"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:ellipsize="end"-->
-    <!--android:singleLine="true"-->
-    <!--android:text="Name"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold"-->
-    <!--android:visibility="gone" />-->
-
-    <!--<RadioGroup-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="vertical">-->
-
-    <!--<RadioButton-->
-    <!--android:id="@+id/rdBtnToday"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="28dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:checked="true"-->
-    <!--android:drawableLeft="@drawable/today_icon"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="HOME"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />-->
-
-    <!--<RadioButton-->
-    <!--android:id="@+id/rdBtnParentingBlogs"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/parenting"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="PARENTING BLOGS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />-->
-
-    <!--<RadioButton-->
-    <!--android:id="@+id/rdBtnCalender"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/calendar_new"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="CALENDAR"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />-->
-
-    <!--&lt;!&ndash; <RadioButton-->
-    <!--android:id="@+id/rdBtnTodo"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/todo"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="TO-DO LISTS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />&ndash;&gt;-->
-
-    <!--<RadioButton-->
-    <!--android:id="@+id/rdBtnUpcoming"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/upcoming_events"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="UPCOMING EVENTS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />-->
-
-    <!--<RadioButton-->
-    <!--android:id="@+id/rdBtnKids"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/kids"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="KIDS RESOURCES"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />-->
-
-
-    <!--&lt;!&ndash;  <RadioButton-->
-    <!--android:id="@+id/editor"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/parenting"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="EDITOR"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />-->
-    <!--<RadioButton-->
-    <!--android:id="@+id/drafts"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@drawable/selector_drawer_menu"-->
-    <!--android:button="@null"-->
-    <!--android:drawableLeft="@drawable/parenting"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:padding="12dp"-->
-    <!--android:text="DRAFTS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="16sp"-->
-    <!--android:textStyle="bold" />&ndash;&gt;-->
-
-
-    <!--</RadioGroup>-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txvfeedback"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="40dp"-->
-    <!--android:drawableLeft="@drawable/parenting"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="SEND FEEDBACK"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp"-->
-    <!--android:visibility="gone" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txvrate"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:drawableLeft="@drawable/parenting"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="RATE THE APP"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp"-->
-    <!--android:visibility="gone" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/editor"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="22dp"-->
-    <!--android:drawableLeft="@drawable/icon_add_blog"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="ADD A BLOG"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/drafts"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:drawableLeft="@drawable/icon_drafts"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="DRAFTS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/bloggerDashboard"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:drawableLeft="@drawable/icon_my_blogs"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="MY BLOGS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txvSettings"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:drawableLeft="@drawable/settings_new"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="SETTINGS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txvMeetContributors"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:drawableLeft="@drawable/icon_contributor"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="MEET OUR CONTRIBUTORS"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/feed_back"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginBottom="8dp"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:drawableLeft="@drawable/feedback_xxhdpi"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="SEND FEEDBACK"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--&lt;!&ndash;  <TextView-->
-    <!--android:id="@+id/txvtelfrnd"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:drawableLeft="@drawable/tellafriend_xxhdpi"-->
-    <!--android:drawablePadding="8dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="10dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="TELL A FRIEND"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/txvHelp"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:drawableLeft="@drawable/help_new"-->
-    <!--android:drawablePadding="10dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="12dp"-->
-    <!--android:paddingTop="5dp"-->
-    <!--android:text="HELP"-->
-    <!--android:textColor="@color/white_color"-->
-    <!--android:textSize="12sp" />&ndash;&gt;-->
-
-
-    <!--</LinearLayout>-->
 </ScrollView>
