network issue handling and calendar removal at dashboard

--- a/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_item.xml
@@ -41,7 +41,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/white_color"
-        android:gravity="center"
+        android:gravity="left"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:text="FOLLOW"
@@ -59,7 +59,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/white_color"
         android:foregroundGravity="center"
-        android:gravity="center"
+        android:gravity="left"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:text="FOLLOWING"
