--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -29,7 +29,6 @@
                     android:id="@+id/blogHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#ce92d8"
                     android:orientation="horizontal"
                     android:weightSum="1">
 
@@ -39,7 +38,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".12"
-                        android:src="@drawable/blog_listxxhdpi" />
+                        android:src="@null"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/txtBlogs"
@@ -47,12 +47,12 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".85"
-                        android:paddingBottom="10dp"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="8dp"
                         android:paddingTop="10dp"
-                        android:text="Trending Blogs"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:text="TRENDING BLOGS"
+                        android:textColor="@color/primary"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <ProgressBar
@@ -75,8 +75,8 @@
                 <HorizontalScrollView
                     android:id="@+id/bloglist"
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="230dp"
+                    android:layout_marginTop="1dp"
                     android:divider="@color/dividercolor"
                     android:dividerHeight="0.3dp"
                     android:scrollbars="none">
@@ -109,7 +109,6 @@
                     android:id="@+id/momspressoHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#ce92d8"
                     android:orientation="horizontal"
                     android:weightSum="1">
 
@@ -119,7 +118,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".12"
-                        android:src="@drawable/blog_listxxhdpi" />
+                        android:src="@null"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/txtMomspresso"
@@ -127,12 +127,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".85"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp"
-                        android:text="Monspresso Blogs"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="8dp"
+                        android:text="MOMSPRESSO VIDEOS"
+                        android:textColor="@color/primary"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <ProgressBar
@@ -155,8 +154,8 @@
                 <HorizontalScrollView
                     android:id="@+id/momspressolist"
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="230dp"
+                    android:layout_marginTop="1dp"
                     android:divider="@color/dividercolor"
                     android:dividerHeight="0.3dp"
                     android:scrollbars="none">
@@ -190,7 +189,6 @@
                     android:id="@+id/blogHeader1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/home_purple"
                     android:orientation="horizontal"
                     android:weightSum="1">
 
@@ -200,7 +198,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".12"
-                        android:src="@drawable/blog_listxxhdpi" />
+                        android:src="@null"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/txtBlogs1"
@@ -208,12 +207,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".85"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp"
-                        android:text="Editor's Picks"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="8dp"
+                        android:text="EDITOR'S PICKS"
+                        android:textColor="@color/primary"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <ProgressBar
@@ -236,8 +234,8 @@
                 <HorizontalScrollView
                     android:id="@+id/bloglist1"
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="230dp"
+                    android:layout_marginTop="1dp"
                     android:divider="@color/dividercolor"
                     android:dividerHeight="0.3dp"
                     android:scrollbars="none">
@@ -256,7 +254,6 @@
                     android:id="@+id/go_to_blog1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="15dp"
                     android:text="@string/home_goto_blog"
                     android:textColor="@color/home_light_blue"
                     android:textStyle="bold"
@@ -367,109 +364,18 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <!--<android.support.v7.widget.CardView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="5dp"-->
-            <!--android:layout_marginRight="5dp"-->
-            <!--android:layout_marginTop="5dp">-->
-
-            <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/white_color"-->
-            <!--android:orientation="vertical">-->
-
-
-            <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/home_green"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:weightSum="1">-->
-
-
-            <!--<ImageView-->
-            <!--android:id="@+id/img_go_to_todo"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_vertical"-->
-            <!--android:layout_weight=".2"-->
-            <!--android:src="@drawable/note_3d_listhdpi" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/txtTodo"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_vertical"-->
-            <!--android:layout_weight=".7"-->
-            <!--android:paddingBottom="10dp"-->
-            <!--android:paddingTop="10dp"-->
-            <!--android:text="To Do"-->
-            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-            <!--android:textColor="@color/white_color"-->
-            <!--android:textStyle="bold" />-->
-
-            <!--<ImageView-->
-            <!--android:id="@+id/add_task"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_vertical"-->
-            <!--android:layout_weight=".1"-->
-            <!--android:padding="5dp"-->
-            <!--android:src="@drawable/attachment" />-->
-
-            <!--</LinearLayout>-->
-
-            <!--<com.mycity4kids.widget.CustomListView-->
-            <!--android:id="@+id/home_taskList"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:divider="@color/dividercolor"-->
-            <!--android:dividerHeight="0.3dp" />-->
-
-            <!--<View-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="1dp"-->
-            <!--android:background="@color/home_bg" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/go_to_task"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="15dp"-->
-            <!--android:text="@string/home_goto_todo"-->
-            <!--android:textColor="@color/home_light_blue"-->
-            <!--android:textStyle="bold" />-->
-
-            <!--</LinearLayout>-->
-            <!--</android.support.v7.widget.CardView>-->
-
-            <!-- <android.support.v7.widget.CardView
-                 android:id="@+id/eventsss"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginLeft="5dp"
-                 android:layout_marginRight="5dp"
-                 android:layout_marginTop="5dp">-->
-
             <LinearLayout
-
                 android:id="@+id/eventsss"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <LinearLayout
-
                     android:id="@+id/eventHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/home_blue"
                     android:orientation="horizontal"
                     android:weightSum="1">
-
 
                     <ImageView
                         android:id="@+id/img_go_to_events"
@@ -477,7 +383,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".13"
-                        android:src="@drawable/zoom_list" />
+                        android:src="@null"
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/txtEvents"
@@ -485,12 +392,11 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight=".85"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="8dp"
                         android:text="@string/home_events"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white_color"
-                        android:textStyle="bold" />
+                        android:textColor="@color/primary"
+                        android:textSize="15sp" />
 
 
                 </LinearLayout>
@@ -523,8 +429,8 @@
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_height="230dp"
+                    android:layout_marginTop="1dp"
                     android:divider="@color/dividercolor"
                     android:dividerHeight="0.3dp"
                     android:scrollbars="none">
