--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_article_dashboard.xml
@@ -12,7 +12,11 @@
         android:id="@+id/cardViewWidget"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="8dp">
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp">
+
 
         <!--    <HorizontalScrollView
                 android:id="@+id/titleContainer"
