--- a/MyCity4Kids/MyCity4Kids/res/layout/card_item_event_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/card_item_event_dashboard.xml
@@ -3,38 +3,27 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <!-- android:paddingBottom="10dp"
-     android:paddingLeft="10dp"
-     android:paddingRight="10dp"
-     android:paddingTop="10dp">-->
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewWidget"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="8dp">
-
-        <!--    <HorizontalScrollView
-                android:id="@+id/titleContainer"
-                android:layout_width="match_parent"
-                android:layout_height="67dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">-->
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp">
 
         <LinearLayout
             android:id="@+id/imvAuthorThumbContainer"
             android:layout_width="205dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:orientation="vertical"
-            android:paddingTop="5dp"
-
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:ellipsize="end"
                 android:fontFamily="sans-serif"
@@ -43,19 +32,18 @@
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="5dp"
+                android:paddingTop="5dp"
                 android:singleLine="false"
                 android:text="Event Name"
                 android:textColor="@color/black_color"
-                android:textSize="14sp"
-
-                />
+                android:textSize="14sp" />
 
             <LinearLayout
+                android:id="@+id/middleContainer"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:id="@+id/middleContainer">
+                android:paddingLeft="10dp">
 
                 <ImageView
                     android:id="@+id/eventThumbnail"
@@ -125,10 +113,10 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="sans-serif-light"
+                            android:singleLine="true"
                             android:text="address"
                             android:textColor="#595959"
-                            android:textSize="12sp"
-                            android:singleLine="true"/>
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -163,10 +151,10 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lowerContainer"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:paddingLeft="10dp"
-                android:id="@+id/lowerContainer">
+                android:paddingLeft="10dp">
 
                 <TextView
                     android:id="@+id/category"
@@ -197,18 +185,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:src="@drawable/add_red"
-                   />
+                    android:src="@drawable/add_red" />
 
                 <ImageView
+                    android:id="@+id/call"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:paddingRight="10dp"
-                    android:src="@drawable/contact_xxhdpi"
-                    android:id="@+id/call"/>
+                    android:src="@drawable/contact_xxhdpi" />
             </RelativeLayout>
         </LinearLayout>
 
